--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -10,14 +10,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full - Start Bootstrap Template</title>
+    <title>Kriso i beti</title>
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
     <link href="css/full.css" rel="stylesheet">
-
+    <link href="css/About.css" rel="stylesheet">
 
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -35,7 +35,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Kris i Beti</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,7 +45,7 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#services">Gallery</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -61,7 +61,6 @@
 </nav>
 
 
-
    <header>
        <div class="header-container">
            <div class="video-container">
@@ -70,8 +69,25 @@
                </video>
            </div>
 
+           <div class="header-content">
+                   <div class="header-content-inner">
+                       <h1 id="homeHeading">PROBA NA TEXTA</h1>
+                       <hr>
+                       <p></p>
+                       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                   </div>
+           </div>
        </div>
    </header>
+<section id="services">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">At Your Service</h2>
+                <hr class="primary">
+            </div>
+        </div>
+    </div>
 
 
 
