--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -14,10 +14,11 @@
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
     <link href="css/full.css" rel="stylesheet">
-    <link href="css/About.css" rel="stylesheet">
+
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -25,7 +26,7 @@
 
 </head>
 
-<body>
+<body id="page-top">
 
 
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -35,7 +36,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Kris i Beti</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Kriso i Eli-Snimat</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -45,7 +46,7 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Gallery</a>
+                    <a class="page-scroll" href="#gallery">Gallery</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
@@ -62,18 +63,12 @@
 
 
    <header>
-       <div class="header-container">
-           <div class="video-container">
-               <video autoplay="" loop="" class="fillWidth fadeIn animated" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
-                   <source src="https://s3-us-west-2.amazonaws.com/coverr/mp4/Traffic-blurred2.mp4" type="video/mp4">Your browser does not support the video tag. I suggest you upgrade your browser.
-               </video>
-           </div>
-
            <div class="header-content">
                    <div class="header-content-inner">
-                       <h1 id="homeHeading">PROBA NA TEXTA</h1>
+                       <h1 id="homeHeading">Welcome To Our Page!</h1>
                        <hr>
-                       <p></p>
+                       <h2>IT'S NICE TO MEET YOU</h2>
+                       <br>
                        <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
                    </div>
            </div>
@@ -88,7 +83,7 @@
             </div>
         </div>
     </div>
-    <section/>
+    </section>
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -185,8 +180,6 @@
             </div>
         </div>
     </section>
-
-
 
     <script src="js/jquery.js"></script>
 
