--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -16,12 +16,12 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/full.css" rel="stylesheet">
 
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 
 
 </head>
@@ -74,6 +74,7 @@
            </div>
        </div>
    </header>
+
 <section id="services">
     <div class="container">
         <div class="row">
@@ -84,6 +85,7 @@
         </div>
     </div>
     </section>
+
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -181,10 +183,14 @@
         </div>
     </section>
 
-    <script src="js/jquery.js"></script>
+<script src="js/jquery/jquery.min.js"></script>
 
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <script src="js/creative.min.js"></script>
 
 
 </body>
