--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -75,7 +75,7 @@
        </div>
    </header>
 
-<section id="services">
+    <section id="services">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -182,6 +182,66 @@
             </div>
         </div>
     </section>
+
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col col-md-4">
+                    <h3>Fast links:</h3>
+                    <ul class="list">
+                        <li>
+                            <a href="#" class="btn-social btn-outline">Hui</a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline">Pusy</i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline">About</a>
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h3>Follow us arround the web:</h3>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h3>What we do best</h3>
+                    <p>We provide professional photoshooting at your prom and as well as sex services </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; Kris i BEti Snimat 2016
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
 
 <script src="js/jquery/jquery.min.js"></script>
 
