--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -183,59 +183,57 @@
         </div>
     </section>
 
-<footer class="text-center">
-    <div class="footer-above">
-        <div class="container">
-            <div class="row">
-                <div class="footer-col col-md-4">
-                    <h3>Fast links:</h3>
-                    <ul class="list">
-                        <li>
-                            <a href="#" class="btn-social btn-outline">Hui</a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline">Pusy</i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline">About</a>
-                        </li>
 
-                    </ul>
-                </div>
-                <div class="footer-col col-md-4">
-                    <h3>Follow us arround the web:</h3>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-col col-md-4">
-                    <h3>What we do best</h3>
-                    <p>We provide professional photoshooting at your prom and as well as sex services </p>
-                </div>
+
+
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-2">
+                <h6>Copyright &copy; 2016 (kris ibe ti snimat)  </h6>
+
             </div>
-        </div>
-    </div>
-    <div class="footer-below">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    Copyright &copy; Kris i BEti Snimat 2016
-                </div>
+            <div class="col-sm-4">
+                <h6>About us </h6>
+                <p>Waht we do is very important to the planet</p>
             </div>
+
+            <div class="col-sm-2">
+                <h6>Navigation</h6>
+                <ul class="list-unstyled">
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Majnata ti</a></li>
+
+                </ul>
+            </div>
+
+            <div class="col-sm-2">
+                <h6>Follow us arround the web:</h6>
+                <ul class="list-inline">
+                    <li>
+                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                    </li>
+                    <li>
+                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-sm-2">
+                <h6>Coded with <span class="glyphicon glyphicon-search"></span> by Lubaka Andrey i Marto</h6>
+            </div>
+
         </div>
     </div>
 </footer>
