--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -226,7 +226,7 @@
             </div>
             <div class="col-sm-4">
                 <h6>About us </h6>
-                <p>Waht we do is very important to the planet</p>
+                <p id="auboutusFooter">Waht we do is very important to the planet</p>
             </div>
 
             <div class="col-sm-2">
