--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -14,7 +14,7 @@
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/full.css" rel="stylesheet">
+    <link href="css/cssAbout.css" rel="stylesheet">
 
     <link href="fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -36,7 +36,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Kriso i Eli-Snimat</a>
+            <a class="navbar-brand page-scroll" href="index.html">Kriso i Eli-Snimat</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,6 +54,9 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#login">Login</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -61,22 +64,23 @@
     <!-- /.container-fluid -->
 </nav>
 
-
-
-
-
-
-
+    <div class="container-hui">
+        <div class="row-Content">
+            <h1 id="LandM">ABOUT US</h1>
+            <hr>
+            <p>AAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska alaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrsalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrsalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrsBalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska Bala</p>
+        </div>
+    </div>
 <footer>
     <div class="container">
         <div class="row">
             <div class="col-sm-2">
-                <h6>Copyright &copy; 2016 (kris ibe ti snimat)  </h6>
+                <h6>Copyright &copy; 2016 (kris  i beti snimat)  </h6>
 
             </div>
             <div class="col-sm-4">
                 <h6>About us </h6>
-                <p id="auboutusFooter">Waht we do is very important to the planet</p>
+                <p id="auboutusFooter">What we do is very important to the planet</p>
             </div>
 
             <div class="col-sm-2">
