--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -36,14 +36,14 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Kriso i Eli-Snimat</a>
+            <a class="navbar-brand page-scroll" href="index.html">Kristiqn E PEDAL</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="About_us.html">About</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#gallery">Gallery</a>
@@ -54,14 +54,15 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#login">Login</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
 </nav>
-
-
    <header>
            <div class="header-content">
                    <div class="header-content-inner">
@@ -69,7 +70,7 @@
                        <hr>
                        <h2>IT'S NICE TO MEET YOU</h2>
                        <br>
-                       <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                       <a href="About_us.html" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
                    </div>
            </div>
        </div>
@@ -214,19 +215,16 @@
         </div>
     </section>
 
-
-
-
-<footer>
-    <div class="container">
+    <footer>
+     <div class="container">
         <div class="row">
             <div class="col-sm-2">
-                <h6>Copyright &copy; 2016 (kris ibe ti snimat)  </h6>
+                <h6>Copyright &copy; 2016 (kris i beti snimat)  </h6>
 
             </div>
             <div class="col-sm-4">
                 <h6>About us </h6>
-                <p id="auboutusFooter">Waht we do is very important to the planet</p>
+                <p id="auboutusFooter">What we do is very important to the planet</p>
             </div>
 
             <div class="col-sm-2">
@@ -268,9 +266,6 @@
         </div>
     </div>
 </footer>
-
-
-
 
 <script src="js/jquery/jquery.min.js"></script>
 
