--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -19,6 +19,7 @@
     <link href="fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -36,7 +37,9 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="index.html">Kristiqn E PEDAL</a>
+            <a class="navbar-brand page-scroll" href="index.html">
+                <img class="img-responsive img-circle" src="img/siteLogo.jpg"  style="width: 75px;">WTF
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -83,7 +86,7 @@
                 <h2>Our Services</h2>
                 <hr class="small">
                 <div class="row">
-                    <div class="col-md-3 col-sm-6">
+                    <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -96,8 +99,36 @@
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-list-alt fa-stack-1x text-primary"></i>
+                            </span>
+                            <h4>
+                                <strong>PhotographySource</strong>
+                            </h4>
+                            <p>We provide you with the update information about photography exhibitions and other events</p>
+                            <a href="#" class="btn btn-light">Learn More</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-font-awesome fa-stack-1x text-primary"></i>
+                            </span>
+                            <h4>
+                                <strong>PhotoContest</strong>
+                            </h4>
+                            <p>Every month we are making contest to motivate our visitors.</p>
+                            <a href="#" class="btn btn-light">Learn More</a>
+                        </div>
+                    </div>
+
 
                 </div>
+
                 <!-- /.row (nested) -->
             </div>
             <!-- /.col-lg-10 -->
