--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -36,8 +36,11 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="index.html">Kriso i Eli-Snimat</a>
+            <a class="navbar-brand page-scroll" href="index.html">
+                <img class="img-responsive img-circle" src="img/abv.jpg"  style="width: 75px;">WTF
+            </a>
         </div>
+
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -63,15 +66,32 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
+    <header>
+    <div class="header-content">
+        <div class="header-content-inner">
 
-    <div class="container-hui">
-        <div class="row-Content">
-            <h1 id="LandM">ABOUT US</h1>
-            <hr>
-            <p>AAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska alaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrsalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrsalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrsBalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska BalaAAlabrska Bala</p>
         </div>
     </div>
-<footer>
+    </div>
+    </header>
+    <div class="container-hui">
+        <div class="row-Content">
+            <h1 id="LandM">About</h1>
+            <hr>
+    </div>
+        <!-- Intro Content -->
+        <div class="row">
+            <div class="col-md-6">
+                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+            </div>
+            <div class="col-md-6">
+              <h2>Nie sme </h2>
+                <p>PROFESIONAL SESH SE AAAAAA</p>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <footer>
     <div class="container">
         <div class="row">
             <div class="col-sm-2">
