--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -38,7 +38,7 @@
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="index.html">
-                <img class="img-responsive img-circle" src="img/siteLogo.jpg"  style="width: 75px;">WTF
+                <img class="img-responsive img-circle" src="img/abv.jpg"  style="width: 75px;">WTF
             </a>
         </div>
 
@@ -46,19 +46,19 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="About_us.html">About</a>
+                    <a class="page-scroll" href="About_us.html">За нас</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#gallery">Gallery</a>
+                    <a class="page-scroll" href="Gallery.html">Галерия</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#portfolio">Портфолио</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#contact">Контакти</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#login">Login</a>
+                    <a class="page-scroll" href="#login">Вход</a>
                 </li>
             </ul>
         </div>
@@ -69,11 +69,11 @@
    <header>
            <div class="header-content">
                    <div class="header-content-inner">
-                       <h1 id="homeHeading">Welcome To Our Page!</h1>
+                       <h1 id="homeHeading">Добре дошли в нашата страница!</h1>
                        <hr>
-                       <h2>IT'S NICE TO MEET YOU</h2>
+                       <h2></h2>
                        <br>
-                       <a href="About_us.html" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                       <a href="About_us.html" class="btn btn-primary btn-xl page-scroll">Открийте повече</a>
                    </div>
            </div>
        </div>
@@ -83,7 +83,7 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
-                <h2>Our Services</h2>
+                <h2>Услуги</h2>
                 <hr class="small">
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
@@ -93,9 +93,9 @@
                                 <i class="fa fa-camera fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Professional PhotoShooting</strong>
+                                <strong>Фотосесии</strong>
                             </h4>
-                            <p>Our professional photographers provides you with the best photoshooting service on a reasonable price.</p>
+                            <p></p>
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
@@ -106,9 +106,9 @@
                                 <i class="fa fa-list-alt fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>PhotographySource</strong>
+                                <strong>Информация</strong>
                             </h4>
-                            <p>We provide you with the update information about photography exhibitions and other events</p>
+                            <p>Предоставяме ви,обновена информация,относно фотографски събития</p>
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
@@ -119,9 +119,9 @@
                                 <i class="fa fa-font-awesome fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>PhotoContest</strong>
+                                <strong>Най-добра снимка</strong>
                             </h4>
-                            <p>Every month we are making contest to motivate our visitors.</p>
+                            <p>Всеки месец правим състезания с които да ви мотивираме</p>
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
