--- a/Project/PhotographyWebSite/Gallery.html
+++ b/Project/PhotographyWebSite/Gallery.html
@@ -43,10 +43,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="About_us.html">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#gallery">Gallery</a>
+                    <a class="page-scroll" href="Gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
