--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -38,7 +38,7 @@
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="index.html">
-                <img class="img-responsive img-circle" src="img/abv.jpg"  style="width: 75px;">WTF
+                <img class="img-responsive img-circle" src="img/siteLogo2.png"  style="width: 70px;">WTF
             </a>
         </div>
 
