--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -158,10 +158,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Категория
                                 </div>
                                 <div class="project-name">
-                                   Portrait Photography
+                                  Портретна Фотография
                                 </div>
                             </div>
                         </div>
@@ -173,10 +173,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                   Категория
                                 </div>
                                 <div class="project-name">
-                                    Black and White Photography
+                                    Черно-бяла Фотография
                                 </div>
                             </div>
                         </div>
@@ -188,10 +188,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Категория
                                 </div>
                                 <div class="project-name">
-                                    Nature Photography
+                                    Художествена Фотография
                                 </div>
                             </div>
                         </div>
@@ -203,10 +203,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Категория
                                 </div>
                                 <div class="project-name">
-                                    Low light Photography
+                                    Ношна Фотография
                                 </div>
                             </div>
                         </div>
@@ -218,10 +218,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Категория
                                 </div>
                                 <div class="project-name">
-                                    Landscapre Photography
+                                    Пейзажна Фотография
                                 </div>
                             </div>
                         </div>
@@ -233,10 +233,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Категория
                                 </div>
                                 <div class="project-name">
-                                    Flash Photography
+                                    Сватбена Фотография
                                 </div>
                             </div>
                         </div>
@@ -250,30 +250,16 @@
      <div class="container">
         <div class="row">
             <div class="col-sm-2">
-                <h6>Copyright &copy; 2016 (kris i beti snimat)  </h6>
+                <h6>Всички права запазени&copy; 2016</h6>
 
             </div>
-            <div class="col-sm-4">
-                <h6>About us </h6>
-                <p id="auboutusFooter">What we do is very important to the planet</p>
-            </div>
 
-            <div class="col-sm-2">
-                <h6>Navigation</h6>
-                <ul class="list-unstyled">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Majnata ti</a></li>
-
-                </ul>
-            </div>
 
             <div class="col-sm-2">
                 <h6>Follow us arround the web:</h6>
                 <ul class="list-inline">
                     <li>
-                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/BettKriss/?fref=ts" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
