--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Kriso i beti</title>
+    <title>НЯяя се кааа така е</title>
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -83,46 +83,43 @@
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
-                <h2>Услуги</h2>
+                <h2>Информация</h2>
                 <hr class="small">
                 <div class="row">
                     <div class="col-md-4 col-sm-6">
                         <div class="service-item">
-                                <span class="fa-stack fa-4x">
+                               <a id="information-vruzkaa" href="index.html"><span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-camera fa-stack-1x text-primary"></i>
-                            </span>
+                            </span></a>
                             <h4>
-                                <strong>Фотосесии</strong>
+                                <strong>Услуги</strong>
                             </h4>
                             <p></p>
-                            <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="service-item">
-                                <span class="fa-stack fa-4x">
+                               <a id="information-vruzka" href="index.html"><span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-list-alt fa-stack-1x text-primary"></i>
-                            </span>
+                            </span></a>
                             <h4>
-                                <strong>Информация</strong>
+                                <strong>Събития</strong>
                             </h4>
-                            <p>Предоставяме ви,обновена информация,относно фотографски събития</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
+                            <p>Предоставяме ви обновена информация, относно фотографски събития</p>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="service-item">
-                                <span class="fa-stack fa-4x">
+                            <a id="information-vruzki" href="index.html"><span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-font-awesome fa-stack-1x text-primary"></i>
-                            </span>
+                            </span></a>
                             <h4>
-                                <strong>Най-добра снимка</strong>
+                                <strong>Конкурс - най-добра снимка</strong>
                             </h4>
-                            <p>Всеки месец правим състезания с които да ви мотивираме</p>
-                            <a href="#" class="btn btn-light">Learn More</a>
+                            <p>Всеки месец правим състезания, с които да ви мотивираме</p>
                         </div>
                     </div>
 
@@ -139,10 +136,10 @@
 </section>
 
     <section id="services1">
-    <div class="container">
+    <div class="container-services">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Our Work</h2>
+                <h2 class="section-heading">Произведения</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -247,16 +244,15 @@
     </section>
 
     <footer>
-     <div class="container">
+     <div class="container-kiko">
         <div class="row">
             <div class="col-sm-2">
-                <h6>Всички права запазени&copy; 2016</h6>
+                <h6 class="footer-text-color"> Всички права запазени&copy; 2016</h6>
 
             </div>
-
-
-            <div class="col-sm-2">
-                <h6>Follow us arround the web:</h6>
+            <div class="col-sm-2"></div>
+                <div class="col-sm-2">
+                <h6 class="footer-text-color">Последвайте ни:</h6>
                 <ul class="list-inline">
                     <li>
                         <a href="https://www.facebook.com/BettKriss/?fref=ts" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -267,17 +263,11 @@
                     <li>
                         <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                     </li>
-                    <li>
-                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                    </li>
                 </ul>
             </div>
-
+            <div class="col-sm-2"></div>
             <div class="col-sm-2">
-                <h6>Coded with <span class="glyphicon glyphicon-search"></span> by Lubaka Andrey i Marto</h6>
+                <h6 class="footer-text-color"> Сайта е нацепен:От Любака,Марто и Андрей!</h6>
             </div>
 
         </div>
