--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -15,6 +15,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/full.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/magnific-popup.css">
 
     <link href="fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -280,8 +281,9 @@
 <script src="js/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/jquery.magnific-popup.js"></script>
+    <script src="js/creative.js"></script>
 
-    <script src="js/creative.min.js"></script>
 
 
 </body>
