--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -10,15 +10,17 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About us</title>
+    <title>За нас</title>
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/cssAbout.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/magnific-popup.css">
 
     <link href="fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -37,28 +39,27 @@
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="index.html">
-                <img class="img-responsive img-circle" src="img/abv.jpg"  style="width: 75px;">WTF
+                <img class="img-responsive img-circle" src="img/siteLogo2.png"  style="width: 70px;">WTF
             </a>
         </div>
-
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="About_us.html">За нас</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#gallery">Gallery</a>
+                    <a class="page-scroll" href="Gallery.html">Галерия</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#portfolio">Портфолио</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#contact">Контакти</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#login">Login</a>
+                    <a class="page-scroll" href="#login">Вход</a>
                 </li>
             </ul>
         </div>
@@ -66,59 +67,20 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
-    <header>
-    <div class="header-content">
-        <div class="header-content-inner">
 
-        </div>
-    </div>
-    </div>
-    </header>
-    <div class="container-hui">
-        <div class="row-Content">
-            <h1 id="LandM">About</h1>
-            <hr>
-    </div>
-        <!-- Intro Content -->
-        <div class="row">
-            <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-            </div>
-            <div class="col-md-6">
-              <h2>Nie sme </h2>
-                <p>PROFESIONAL SESH SE AAAAAA</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <footer>
-    <div class="container">
+<footer>
+    <div class="container-kiko">
         <div class="row">
             <div class="col-sm-2">
-                <h6>Copyright &copy; 2016 (kris  i beti snimat)  </h6>
+                <h6 class="footer-text-color"> Всички права запазени&copy; 2016</h6>
 
             </div>
-            <div class="col-sm-4">
-                <h6>About us </h6>
-                <p id="auboutusFooter">What we do is very important to the planet</p>
-            </div>
-
+            <div class="col-sm-2"></div>
             <div class="col-sm-2">
-                <h6>Navigation</h6>
-                <ul class="list-unstyled">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Majnata ti</a></li>
-
-                </ul>
-            </div>
-
-            <div class="col-sm-2">
-                <h6>Follow us arround the web:</h6>
+                <h6 class="footer-text-color">Последвайте ни:</h6>
                 <ul class="list-inline">
                     <li>
-                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/BettKriss/?fref=ts" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
@@ -126,25 +88,16 @@
                     <li>
                         <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                     </li>
-                    <li>
-                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                    </li>
-                    <li>
-                        <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                    </li>
                 </ul>
             </div>
-
+            <div class="col-sm-2"></div>
             <div class="col-sm-2">
-                <h6>Coded with <span class="glyphicon glyphicon-search"></span> by Lubaka Andrey i Marto</h6>
+                <h6 class="footer-text-color"> Сайта е нацепен:От Любака,Марто и Андрей!</h6>
             </div>
 
         </div>
     </div>
 </footer>
-
-
-
 
 <script src="js/jquery/jquery.min.js"></script>
 
@@ -152,10 +105,9 @@
 <script src="js/bootstrap/js/bootstrap.min.js"></script>
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-<script src="js/creative.min.js"></script>
+<script src="js/jquery.magnific-popup.js"></script>
+<script src="js/creative.js"></script>
 
 
 </body>
-
 </html>
