--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -245,7 +245,7 @@
     </section>
 
     <footer>
-     <div class="container-kiko">
+     <div class="container-footer">
         <div class="row">
             <div class="col-sm-2">
                 <h6 class="footer-text-color"> Всички права запазени&copy; 2016</h6>
