--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -69,7 +69,7 @@
 </nav>
 
 <footer>
-    <div class="container-kiko">
+    <div class="container-kiko">d
         <div class="row">
             <div class="col-sm-2">
                 <h6 class="footer-text-color"> Всички права запазени&copy; 2016</h6>
