--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -15,6 +15,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/cssAbout.css" rel="stylesheet">
+    <link href="css/full.css" rel="stylesheet">
     <link rel="stylesheet" href="css/magnific-popup.css">
 
     <link href="fonts/font-awesome.css" rel="stylesheet" type="text/css">
@@ -42,7 +43,6 @@
                 <img class="img-responsive img-circle" src="img/siteLogo2.png"  style="width: 70px;">WTF
             </a>
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
@@ -68,8 +68,21 @@
     <!-- /.container-fluid -->
 </nav>
 
+    <header>
+    <div class="header-content">
+        <div class="header-content-inner">
+            <h1 id="homeHeading">Добре дошли в нашата страница!</h1>
+            <hr>
+            <h2></h2>
+            <br>
+            <a href="About_us.html" class="btn btn-primary btn-xl page-scroll">Открийте повече</a>
+        </div>
+    </div>
+    </div>
+    </header>
+
 <footer>
-    <div class="container-kiko">d
+    <div class="container-footer">
         <div class="row">
             <div class="col-sm-2">
                 <h6 class="footer-text-color"> Всички права запазени&copy; 2016</h6>
