--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -68,7 +68,7 @@
     <!-- /.container-fluid -->
 </nav>
 
-    <header>
+    <header id="about-header">
     <div class="header-content">
         <div class="header-content-inner">
             <h1 id="homeHeading">Добре дошли в нашата страница!</h1>
