--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -137,7 +137,7 @@
 </section>
 
     <section id="services1">
-    <div class="container-services">
+    <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Произведения</h2>
@@ -244,8 +244,8 @@
         </div>
     </section>
 
-    <footer>
-     <div class="container-footer">
+    <footer id="footer">
+     <div class="container" >
         <div class="row">
             <div class="col-sm-2">
                 <h6 class="footer-text-color"> Всички права запазени&copy; 2016</h6>
