--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -14,6 +14,8 @@
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/full.css" rel="stylesheet">
+
     <link href="css/cssAbout.css" rel="stylesheet">
 
 
@@ -29,9 +31,6 @@
 
 </head>
 
-<body id="page-top">
-
-
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,6 +42,7 @@
                 <img class="img-responsive img-circle" src="img/siteLogo2.png"  style="width: 70px;">WTF
             </a>
         </div>
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
@@ -68,25 +68,21 @@
     <!-- /.container-fluid -->
 </nav>
 
-    <header id="about-header">
-    <div class="header-content">
-        <div class="header-content-inner">
-            <h1 id="homeHeading">Добре дошли в нашата страница!</h1>
-            <hr>
-            <h2></h2>
-            <br>
-            <a href="About_us.html" class="btn btn-primary btn-xl page-scroll">Открийте повече</a>
+<div class="container" id="ekip">
+    <div class="row" id="ekipnSnimka">
+        <div id="tekstEkip">
+
+            <h1 >dawdawdawdawd</h1>
         </div>
     </div>
-    </div>
-    </header>
+</div>
 
-<footer>
-    <div class="container-footer">
+
+<footer id="footer">
+    <div class="container" >
         <div class="row">
             <div class="col-sm-2">
                 <h6 class="footer-text-color"> Всички права запазени&copy; 2016</h6>
-
             </div>
             <div class="col-sm-2"></div>
             <div class="col-sm-2">
@@ -103,7 +99,7 @@
                     </li>
                 </ul>
             </div>
-
+            <div class="col-sm-2"></div>
             <div class="col-sm-2">
                 <h6 class="footer-text-color"> Сайта е нацепен:От Любака,Марто и Андрей!</h6>
             </div>
@@ -111,6 +107,7 @@
         </div>
     </div>
 </footer>
+
 
 <script src="js/jquery/jquery.min.js"></script>
 
