--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html class="full" lang="en">
 
-
 <head>
 
     <meta charset="utf-8">
@@ -17,8 +16,6 @@
     <link href="css/full.css" rel="stylesheet">
 
     <link href="css/cssAbout.css" rel="stylesheet">
-
-
 
     <link href="fonts/font-awesome.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -39,7 +36,7 @@
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="index.html">
-                <img class="img-responsive img-circle" src="img/siteLogo2.png"  style="width: 70px;">WTF
+                <img class="img-responsive img-circle" src="img/ps%20logo.jpg"  style="width: 65px;">
             </a>
         </div>
 
@@ -59,7 +56,7 @@
                     <a class="page-scroll" href="#contact">Контакти</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#login">Вход</a>
+                    <a class="page-scroll" href="login%20form.html">Вход</a>
                 </li>
             </ul>
         </div>
@@ -72,10 +69,34 @@
     <div class="row" id="ekipnSnimka">
         <div id="tekstEkip">
 
-            <h1 >dawdawdawdawd</h1>
+            <h1 class="text-center"></h1>
         </div>
     </div>
 </div>
+<section id="predstavqne1" class="services bg-primary">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-10 col-lg-offset-1">
+                <div class="row">
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item">
+                    </div>
+                        <p>jdsjdsadsadsadasdasddsadasdasdasdaas</p>
+                        <br>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                    </div>
+                    <div class="col-md-4 col-sm-6">
+                        <div class="service-item">
+
+                        </div>
+
+                </div>
+    </section>
 
 
 <footer id="footer">
