--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -39,7 +39,7 @@
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
             <a class="navbar-brand page-scroll" href="index.html">
-                <img class="img-responsive img-circle" src="img/siteLogo2.png"  style="width: 70px;">WTF
+                <img class="img-responsive img-circle" src="img/ps%20logo.jpg"  style="width: 65px;"><Photoshoot>Photoshoot.bg</Photoshoot>
             </a>
         </div>
 
@@ -59,7 +59,7 @@
                     <a class="page-scroll" href="#contact">Контакти</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#login">Вход</a>
+                    <a class="page-scroll" href="login%20form.html">Вход</a>
                 </li>
             </ul>
         </div>
