--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -75,29 +75,81 @@
 </div>
 <section id="predstavqne1" class="services bg-primary">
     <div class="container">
-        <div class="row text-center">
-            <div class="col-lg-10 col-lg-offset-1">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
-                    </div>
-                        <p>jdsjdsadsadsadasdasddsadasdasdasdaas</p>
-                        <br>
-                        </div>
-                    </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="imgLubo img-thumbnail">
+                    <img width="220" height="220" src="img/profilnaLubo.jpg" />
                 </div>
             </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
-
-                        </div>
-
-                </div>
+            <div class="col-md-8">
+                <h2>Любомир Ганчев</h2>
+                <p id="qkTekst"> AZ SUM NACEPEN BATKA BEEEEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BE</p>
+            </div>
+        </div>
+    </div>
     </section>
 
+<section id="predstavqne2" class="services bg-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="imgMarto img-thumbnail">
+                    <img width="220" height="220" src="img/profilnaMartin.jpg" />
+                </div>
+            </div>
+            <div class="col-md-8">
+                <h2>Мартин Лачев</h2>
+                <p id="tesktMarto"> AZ SUM NACEPEN BATKA BEEEEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BE</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="predstavqne3" class="services bg-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="imgAndrey img-thumbnail">
+                    <img width="220" height="220" src="img/profilnaAndrey.jpg" />
+                </div>
+            </div>
+            <div class="col-md-8">
+                <h2>Андрей Мезов</h2>
+                <p id="testAndrey"> AZ SUM NACEPEN BATKA BEEEEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BE</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="predstavqne4" class="services bg-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="imgKiko img-thumbnail">
+                    <img width="220" height="220" src="img/profilnaAndrey.jpg" />
+                </div>
+            </div>
+            <div class="col-md-8">
+                <h2>Кристиан Арсов</h2>
+                <p id="tesktKrisi"> AZ SUM NACEPEN BATKA BEEEEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BE</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="predstavqne5" class="services bg-primary">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="imgEli img-thumbnail">
+                    <img width="220" height="220" src="img/profilnaAndrey.jpg" />
+                </div>
+            </div>
+            <div class="col-md-8">
+                <h2>Елизабет Еленкова</h2>
+                <p id="tesktELi"> AZ SUM NACEPEN BATKA BEEEEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BEEPEN BATKA BE</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <footer id="footer">
     <div class="container" >
