--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>НЯяя се кааа така е</title>
+    <title>Baj hui</title>
 
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
