--- a/Project/PhotographyWebSite/index.html
+++ b/Project/PhotographyWebSite/index.html
@@ -56,7 +56,7 @@
                     <a class="page-scroll" href="#portfolio">Портфолио</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Контакти</a>
+                    <a class="page-scroll" href="contact.html">Контакти</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="login%20form.html">Вход</a>
@@ -273,6 +273,7 @@
         </div>
     </div>
 </footer>
+
 
     <script src="js/jquery/jquery.min.js"></script>
 
