--- a/Project/PhotographyWebSite/About_us.html
+++ b/Project/PhotographyWebSite/About_us.html
@@ -10,8 +10,6 @@
     <meta name="author" content="">
 
     <title>За нас</title>
-
-
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/full.css" rel="stylesheet">
 
@@ -21,6 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="css/custom.css" rel="stylesheet">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -53,7 +52,7 @@
                     <a class="page-scroll" href="#portfolio">Портфолио</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Контакти</a>
+                    <a class="page-scroll" data-toggle="modal" data-target="#myModal">Контакти</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="login%20form.html">Вход</a>
@@ -65,14 +64,23 @@
     <!-- /.container-fluid -->
 </nav>
 
-<div class="container" id="ekip">
-    <div class="row" id="ekipnSnimka">
-        <div id="tekstEkip">
-
-            <h1 class="text-center"></h1>
+<header>
+    <div class="header-content">
+        <div class="header-content-inner">
         </div>
     </div>
-</div>
+</header>
+
+    <section id="otdel">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">IT Отдел</h2>
+                <hr class="primary">
+            </div>
+        </div>
+    </div>
+    </section>
 <section id="predstavqne1" class="services bg-primary">
     <div class="container">
         <div class="row">
@@ -180,6 +188,77 @@
         </div>
     </div>
 </footer>
+<div class="container">
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="col-lg-8 col-lg-offset-2">
+
+                <form id="contact-form" method="post" action="contact.php" role="form">
+
+                    <div class="messages"></div>
+
+                    <div class="controls">
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_name">Име *</label>
+                                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Въведете име *" required="required" data-error="Необходимо е име.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_lastname">Фамилия *</label>
+                                    <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Въведете фамилия *" required="required" data-error="Необходима е фамилия.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_email">Имейл *</label>
+                                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Въведете имейл *" required="required" data-error="Необходим е валиден имейл.">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    <label for="form_phone">Телефон</label>
+                                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Въведете телефон">
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="form_message">Съобщение *</label>
+                                    <textarea id="form_message" name="message" class="form-control" placeholder="Вашето съобщение *" rows="4" required="required" data-error="Моля, оставете вашето съобщение."></textarea>
+                                    <div class="help-block with-errors"></div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <input type="submit" class="btn btn-success btn-send" value="Изпрати">
+                            </div>
+                        </div>
+                        <div class="row">
+
+                        </div>
+                    </div>
+
+                </form>
+
+            </div><!-- /.8 -->
+
+        </div>
+    </div>
+
+</div>
 
 
 <script src="js/jquery/jquery.min.js"></script>
@@ -189,7 +268,11 @@
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="js/validator.js"></script>
+<script src="js/contact.js"></script>
+<script src="js/creative.js"></script>
 
 
 </body>
